<resources>
    <string name="app_name" translatable="false">Navi</string>

    <string name="action_settings">Settings</string>

    <string name="ui_position_latitude">Latitude</string>
    <string name="ui_position_longitude">Longitude</string>
    <string name="ui_position_lastprovider">Last provider</string>
    <string name="ui_position_lastprovider_network">Network</string>
    <string name="ui_position_lastprovider_gps">GPS</string>
    <string name="ui_position_accuracy">Accuracy</string>
    <string name="ui_position_datetime">Date and Time</string>
    <string name="ui_position_datetime_tag">yyyy-MM-dd HH:mm:ss</string>

    <string name="ui_server_queuesize">Queue size</string>
    <string name="ui_server_queuesize_manypoints">points</string>
    <string name="ui_server_queuesize_onepoint">point</string>
    <string name="ui_server_connected">Server</string>
    <string name="ui_server_connected_offline">Offline</string>
    <string name="ui_server_connected_online">Online</string>

    <string name="ui_infos_user">User name</string>
    <string name="ui_infos_desc">Description</string>

    <string name="ui_service_switch">Enable send service</string>

    <string name="settings_title">Settings</string>
    <string name="settings_save">Save</string>
</resources>
